[workspace]

members = [
    "crates/add_one",
    "crates/awesome",
    "crates/cpu-count",
    "crates/practice",
    "crates/adder",
    "crates/appw",
    "crates/calculator-napi",
    "crates/cli",
    "crates/appr",
    "crates/mgdb",
    "crates/link-checker",
    "crates/benche",
    "crates/benche-criterion"
]
