[package]
name = "mgdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.3.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fake = { version = "2.5", features=['uuid'] }
rand = "0.8"
tokio = { version = "1", features = ["full"] }
pluralizer = "0.3.2"
