[package]
name = "practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
add_one = { path = "../add_one" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3.58", features = ['console'] }
rust_decimal = "1.25"
rust_decimal_macros = "1.25"

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
